--- a/sample.html
+++ b/sample.html
@@ -81,7 +81,8 @@
   <ul>
     <li><a href="" id="favo">favo!</a></li>
     <form  name ="favoForm" action="http://localhost:8080/QuizGameWeb10j_minami/img/JapanQuiz/region8.png" method="post">
-      <input type="hidden" name="jsonData">
+      <input type="hidden" name=
+      "jsonData">
     </form>
     <li><a href="#" id="line">LINE</a></li>
     <li><a href="#" id="twitter">Twitter</a></li>
