--- a/sample.html
+++ b/sample.html
@@ -60,7 +60,7 @@
       <div class="text_underline"></div>
     </div>
 
-      <div class="currentbox">
+      <div class=S"currentbox">
 
       <label for="lat"class="l_text">latitude:緯度</label>
       <p id="currentLat">&emsp;</p>
